# simpleshuffler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  simpleshuffler.sln  simpleshuffler.vcxproj
headers/: simpleshuffler.h
sources/: fuinctions.cpp  main.cpp  main.h
tests/: test_01.txt  test_02.txt  test_03.txt  test_04.txt  test_05.txt  test_token_01.txt
